fix: overflow auto to tasks css

--- a/frontend/to-do-list/src/css/Tasks.css
+++ b/frontend/to-do-list/src/css/Tasks.css
@@ -9,4 +9,6 @@
   background-color: rgba(84, 84, 84, 0.8);
   margin: 50px;
   width: 700px;
+  max-height: 500px;
+  overflow: auto;
 }
